# cpi-vae

./: .gitignore  INSTALLATION.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: data_dirs.txt  data_dirs.yaml
notebooks/: 01-inference.ipynb
scripts/: run_train.py
src/cpi_vae/: __init__.py  data.py  model.py  train.py  utils.py  validate.py
