[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpi-vae"
version = "0.1.0"
description = "Convolutional VAE for CPI cloud particle imagery"
authors = [{name = "Joseph Ko"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "Pillow",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
# CUDA-specific PyTorch installations (choose one)
cu121 = ["torch>=2.0", "torchvision", "torchaudio"]
cu122 = ["torch>=2.0", "torchvision", "torchaudio"]
cu130 = ["torch>=2.0", "torchvision", "torchaudio"]
cpu = ["torch", "torchvision", "torchaudio"]
# Development tools
dev = ["pytest", "black", "flake8", "ipython"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
